--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         }
 
         .flowers {
-            background-image: url('https://www.w3schools.com/w3images/flowers.jpg');
+            background-image: url('https://images.app.goo.gl/crCKttm81jsR42vk8');
             background-size: cover;
             background-position: center;
             height: 200px;
@@ -76,14 +76,14 @@
 
 <div class="container">
     <div class="flowers"></div>
-    <h1>HAPPY NEW YEAR MY LIFE NAINA,</h1>
+    <h1>HAPPY NEW YEAR MY LIFE RATNA,</h1>
     <p>
         THANKS FOR BEING MY LIFE SAVER AND THE QUEEN OF MY HEART. HERE I SEND U THIS, GIVING U ALL MY HEART N MY SOUL.
         TRUST ME, U ARE THE ONLY N ONLY PERSON I WILL KEEP ABOVE ME ALWAYS.
         AND THIS IS JUST A BEGINNING, WE HAVE ALOTTTT TO FEEL TOGETHER, U ARE MY LADYLOVE, BOO BOO, CUPCAKE, BACKCHOD AND HOPEFULLY MY FUTURE WIFEY.
         HOPE U CAN RELATE THESE RED DIAMONDS TO UR NAME.
     </p>
-    <p class="signature">I LOVE U INFINITYYYYY NAINA,</p>
+    <p class="signature">I LOVE U INFINITYYYYY RATNA,</p>
     <p class="signature">UR NAV</p>
 </div>
 
